# Engine3d

./: .gitignore  .gitmodules  CMakeLists.txt  CodeGen.bat  CodeGen_ComponentsUtility.py  Dependencies.lua  Engine3d_cpp.sln  Engine3d_cpp.vcxproj  README.md  compileShaders.bat  premake5.lua  premakeRun.bat
Editor/: CMakeLists.txt  EnginePythonBinding.cpp  imgui.ini
Editor/Editor/: ComponentsList.cpp  ComponentsList.h  Editor.cpp  Editor.h  IEngineEditor.h  Main.cpp
Editor/Editor/Imgui/: ImguiVulkan.cpp  ImguiVulkan.h
Editor/Editor/Utilities/: ComponentsUtility.cpp  ComponentsUtility.h
Editor/Editor/Windows/: AssetsWindow.cpp  AssetsWindow.h  ComponentsRenderer.cpp  ComponentsRenderer.h  Hierarchy.cpp  Hierarchy.h  ImguiDemo.cpp  ImguiDemo.h  Inspector.cpp  Inspector.h  MainWindow.cpp  MainWindow.h  MaterialEditor.cpp  MaterialEditor.h  ParametersRenderer.cpp  ParametersRenderer.h  ProfilerWindow.cpp  ProfilerWindow.h  ResourcesConverter.cpp  ResourcesConverter.h  ResourcesConverterWindow.cpp  ResourcesConverterWindow.h  SystemsStateWindow.cpp  SystemsStateWindow.h  VulkanDebugInfo.cpp  VulkanDebugInfo.h  VulkanTextureView.cpp  VulkanTextureView.h
Editor/Source/: Editor.cpp  Editor.h  Main.cpp
Editor/Source/Imgui/: ImguiVulkan.cpp  ImguiVulkan.h
Editor/Source/Windows/: ComponentInspector.h  ComponentsRenderer.cpp  ComponentsRenderer.h  Hierarchy.cpp  Hierarchy.h  ImguiDemo.h  Inspector.cpp  Inspector.h  ParametersRenderer.cpp  ParametersRenderer.h  VulkanDebugInfo.cpp  VulkanDebugInfo.h
EngineCore/: CMakeLists.txt
EngineCore/EngineCore/: Asset.h  AssetsDatabase.cpp  AssetsDatabase.h  ComponentsFactory.cpp  ComponentsFactory.h  ComponentsList.cpp  ComponentsUtility.h  CustomAssert.h  Ecs.cpp  Ecs.h  Engine.cpp  Engine.h  EngineApi.cpp  EngineApi.h  EngineContext.h  Entity.h  EventHandler.h  IOUtility.cpp  IOUtility.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pch.cpp  Pch.h  Texture.cpp  Texture.h  UniqueIdGenerator.cpp
EngineCore/EngineCore/Assets/: Asset.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshAsset.h  PbrMaterial.cpp  PbrMaterial.h  PbrMaterialAsset.cpp  PbrMaterialAsset.h  Texture.cpp  Texture.h
EngineCore/EngineCore/AssetsManagement/: AssetsDatabase.cpp  AssetsDatabase.h  ResourcesManager.cpp  ResourcesManager.h
EngineCore/EngineCore/Components/: CameraComponent.h  CameraFreeComponent.h  CameraOrbitComponent.h  FreeCameraComponent.h  IdComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  NameComponent.h  NotDestroyableEntityComponent.h  NotSerializableEntityComponent.h  PositionComponent.h  RotationComponent.h  RotationVelocityComponent.h  ScaleComponent.h  ShadowMapComponent.h  UboDiffuseLightComponent.h  UboModelComponent.h  UboViewProjectionComponent.h  UboWorldComponent.h
EngineCore/EngineCore/Core/: AssetsDatabase.cpp  AssetsDatabase.h  AssetsDatabaseVulkan.cpp  AssetsDatabaseVulkan.h  AssetsLoader.cpp  AssetsLoader.h  AssetsLoaderVulkan.cpp  AssetsLoaderVulkan.h  Ecs.cpp  Ecs.h  Entity.h  ISystem.h  Input.cpp  Input.h  Level.cpp  Level.h  ProjectSettings.h  ResourcesManager.h  ResourcesStorage.cpp  ResourcesStorage.h  ResourcesStorageVulkan.cpp  ResourcesStorageVulkan.h  SystemsState.cpp  SystemsState.h  World.cpp  World.h
EngineCore/EngineCore/Defines/: DllDefines.h
EngineCore/EngineCore/Editor/: IEngineEditor.h  IWindow.h
EngineCore/EngineCore/Entities/: Level.cpp  Level.h
EngineCore/EngineCore/Managers/: InputManager.cpp  InputManager.h
EngineCore/EngineCore/Profiler/: Profiler.cpp  Profiler.h  ProfilerSample.cpp  ProfilerSample.h
EngineCore/EngineCore/Rendering/: IGraphicsApi.h  IRenderer.h  PipelineConfig.h  PipelinesCollection.cpp  PipelinesCollection.h  Vertex.h
EngineCore/EngineCore/Rollback/: Rollback.cpp  Rollback.h  RollbackExtension.cpp  RollbackExtension.h
EngineCore/EngineCore/Serialization/: EntitySerializer.cpp  EntitySerializer.h  EntitySerializerGenerated.cpp
EngineCore/EngineCore/Systems/: Camera.cpp  Camera.h  CameraFlySystem.cpp  CameraFlySystem.h  CameraFreeSystem.cpp  CameraFreeSystem.h  CameraOrbitSystem.cpp  CameraOrbitSystem.h  FreeCameraSystem.cpp  FreeCameraSystem.h  ISystem.h  RotatorSystem.cpp  RotatorSystem.h  TransformSystem.cpp  TransformSystem.h  ViewProjectionSystem.cpp  ViewProjectionSystem.h
EngineCore/EngineCore/Utilities/: CameraUtilities.cpp  CameraUtilities.h  ComponentsUtility.cpp  ComponentsUtility.h  IOUtility.cpp  (+8 more)
EngineCore/Source/: AssetsDatabase.cpp  AssetsDatabase.h  Engine.cpp  Engine.h  IEngineEditor.h  Main.cpp  Pch.h
ExampleProject/: CMakeLists.txt  ExampleProject.vcxproj  ExampleProject.vcxproj.filters  imgui.ini
ExampleProject/ExampleProject/: ComponentsFactory.cpp  ComponentsFactory.h  ComponentsList.cpp  ComponentsList.h  Game.cpp  Game.h  Main.cpp
ExampleProject/Prefabs/: Camera_13.yaml  Camera_199.yaml  Car_11.yaml  Car_18.yaml  Car_19.yaml  Cube_17.yaml  Diffuse Light_0.yaml  Diffuse Light_12.yaml  Diffuse Light_198.yaml  Room.yaml  Sphere_15.yaml
ExampleProject/Shaders/: Albedo.frag  Albedo.vert  ColorOnly.frag  Constants.glsl  Frag.frag  Opaque.frag  Opaque.vert  PbrMath.glsl  ShadowMapsMath.glsl  ShadowPass.frag  ShadowPass.vert  Tonemapping.glsl  Vert.vert
ExampleProject/Source/: Main.cpp  Test.cpp  Test.h
ExampleProject/Worlds/: 1.yaml  DamagedHelmet.world  Formula.world  LumberyardCafe.world  LumberyardCafeGltf.world  SonyRecorder.world  Sponza.world  SponzaGltf.world
ExampleProjectEditor/: CMakeLists.txt  Editor.cpp  Editor.h  Main.cpp
ExampleProjectEditor/Windows/: ComponentsRenderer.cpp  ComponentsRenderer.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  ParametersRenderer.cpp  ParametersRenderer.h  SystemsStateWindow.cpp  SystemsStateWindow.h  VulkanTextureView.cpp  VulkanTextureView.h
ExampleProjectExe/: CMakeLists.txt  Main.cpp
ResourcesConverter/: CMakeLists.txt
ResourcesConverter/ResourcesConverter/: ConvertingMeshData.h  Main.cpp  ResourcesConverter.cpp  ResourcesConverter.h  ResourcesConverterGltf.cpp  ResourcesConverterGltf.h  ResourcesConverterObj.cpp  ResourcesConverterObj.h
(+688 files in other folders)
